--- a/index.html
+++ b/index.html
@@ -35,3 +35,9 @@ if (location.protocol.substr(0, 4) === "file")
 
 </body>
 </html>
+<html>
+    <head>
+        <script src="./instant-games-bridge.js"></script>
+    </head>
+    <body>...</body>
+</html>
